Week 6: Adding BenefitsClass and Updating MainForm & InputForm
This week we created the BenefitsClass, adding in HealthInsurance, LifeInsurance, and VacationDays. Updated the InputForm to make room for these additions, then updated the MainForm to make them visible. Also expanded the array for the Read and Write to file.

--- a/Buchholz_CourseProject_Part2/Buchholz_CourseProject_Part2.csproj
+++ b/Buchholz_CourseProject_Part2/Buchholz_CourseProject_Part2.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BenefitsClass.cs" />
     <Compile Include="EmployeeClass.cs" />
     <Compile Include="InputForm.cs">
       <SubType>Form</SubType>
