--- a/Buchholz_CourseProject_Part2/Buchholz_CourseProject_Part2.csproj
+++ b/Buchholz_CourseProject_Part2/Buchholz_CourseProject_Part2.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="BenefitsClass.cs" />
     <Compile Include="EmployeeClass.cs" />
+    <Compile Include="HourlyClass.cs" />
     <Compile Include="InputForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +63,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalaryClass.cs" />
     <EmbeddedResource Include="InputForm.resx">
       <DependentUpon>InputForm.cs</DependentUpon>
     </EmbeddedResource>
